# PirateManagement

./: .gitignore  LICENSE  README.md
api/: api.yaml
docs/: DECISIONS.md  FEATURES.md  PLAN.md
integration-test/: test.js
performance/rust-version/src/: crew_controller.rs  main.rs
scripts/: inspect_db.sh  restart_db.sh  start_db.sh  stop_db.sh
service/: pom.xml
service-go-simple/: .env  crew.go  crew_controller.go  db.go  go.mod  go.sum  main.go  start_db.sh  treasure.go  treasure_controller.go  view.go
service-rust-simple/: Cargo.toml
service-rust-simple/src/: crew.rs  db.rs  treasure.rs  treasure_controller.rs
service-spring-abstract/: README.md  pom.xml
service-spring-abstract/scripts/: generate-api.sh
service-spring-ddd/: pom.xml
service-spring-ddd/src/docs/arc42/: 01_introduction_and_goals.md  02_architecture_constraints.md  03_system_scope_and_context.md  04_solution_strategy.md  05_building_block_view.md  06_runtime_view.md  07_deployment_view.md  08_concepts.md  09_architecture_decisions.md  10_quality_requirements.md  11_technical_risks.md  12_glossary.md  about-arc42.md  arc42-template.md
service-spring-simple/: README.md  pom.xml
service-spring/scripts/: generate-api.sh
spring-service/: pom.xml
trainingground/: development process.md  tickets.md
trainingground/training project/service/: pom.xml
ui-react/: package-lock.json  package.json  tsconfig.json
ui-react/src/: ApiContext.tsx  App.tsx  Home.tsx  main.tsx
ui-react/src/crews/: CrewTable.tsx  Crews.tsx
ui-react/src/treasures/: Treasures.tsx
(+208 files in other folders)
