[package]
name = "service-rust-simple"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
mongodb = "2.2.0"
bigdecimal = {version = "0.3.0", features = ["serde"]}
serde = { version = "1.0.137", features = ["derive"] }
futures = "0.3.21"
serde_json = "1.0"